[gd_scene load_steps=8 format=2]

[ext_resource path="res://Sprites/Menu/shop_icon.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Menu/menu_background.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Menu/tome_icon.png" type="Texture" id=3]
[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=5]
[ext_resource path="res://Sprites/Menu/coven_icon.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Menu/scroll_icon.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Menu/cauldron_icon.png" type="Texture" id=8]

[node name="MainMenu" type="TextureRect"]
texture = ExtResource( 2 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShopButton" type="TextureButton" parent="."]
margin_left = 347.739
margin_top = 241.905
margin_right = 743.739
margin_bottom = 658.905
rect_pivot_offset = Vector2( 195, 208 )
texture_normal = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="ShopButton"]

[node name="TomeButton" type="TextureButton" parent="."]
margin_left = 45.3572
margin_top = 589.644
margin_right = 441.357
margin_bottom = 1006.64
rect_pivot_offset = Vector2( 195, 208 )
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="TomeButton"]

[node name="ScrollButton" type="TextureButton" parent="."]
margin_left = 665.239
margin_top = 604.762
margin_right = 1061.24
margin_bottom = 1021.76
rect_pivot_offset = Vector2( 195, 208 )
texture_normal = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="ScrollButton"]

[node name="CovenButton" type="TextureButton" parent="."]
margin_left = 357.818
margin_top = 947.461
margin_right = 753.818
margin_bottom = 1364.46
rect_pivot_offset = Vector2( 195, 208 )
texture_normal = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="CovenButton"]

[node name="CauldronButton" type="TextureButton" parent="."]
margin_left = 355.98
margin_top = 1383.66
margin_right = 751.98
margin_bottom = 1800.66
rect_pivot_offset = Vector2( 195, 208 )
texture_normal = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="CauldronButton"]
